# deep-research

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
.trae/rules/: project_rules.md
app/agent/: __init__.py  prompt.py
app/api/: __init__.py
app/core/: __init__.py
app/crawler/: __init__.py
app/crawler/browserpool/: __init__.py  browserpool.py  crawl4aipool.py
app/crawler/engines/: __init__.py  baidusearch.py  bingsearch.py  quarksearch.py  sougousearch.py
app/retriever/: __init__.py  reranker.py  textsplitter.py
backend/app/: main.py
backend/app/agents/: prompt.py
backend/app/core/: __init__.py  config.py
backend/app/crawler/browserpool/: __init__.py  browserpool.py  crawl4aipool.py
backend/app/crawler/engines/: __init__.py  baidusearch.py
backend/app/websearch/browserpool/: __init__.py  browserpool.py  crawl4aipool.py
backend/app/websearch/engines/: bingsearch.py  quarksearch.py  sougousearch.py
tests/: test_search_engines.py
tests/results/: 夸克_新质生产力.json  夸克_新质生产力.md  必应_产业升级.json  必应_产业升级.md  必应_新质生产力.json  必应_新质生产力.md  搜狗_产业升级.json  搜狗_产业升级.md  搜狗_新质生产力.json  搜狗_新质生产力.md  百度_产业升级.json  百度_产业升级.md
